<resources>
    <string name="app_name">BocadilloAndroid</string>
    <string name="lg_IniciarSesion">Iniciar Sesión</string>
    <string name="lg_Email">Email</string>
    <string name="lg_contraseña">Contraseña</string>
    <string name="lg_google">Inicia Sesión Con Google</string>
    <string name="lg_eslogan">Cómete el Día</string>
    <string name="lg_Rol">Rol</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>